Add Flask routes for frontend pages

--- a/form.html
+++ b/form.html
@@ -62,7 +62,8 @@
                 family: document.getElementById("family").checked ? 1 : 0
             }));
 
-            location.href = "games.html";
+            location.href = "/games";
+
         }
     </script>
 </body>
